# google-search-crawler

./: .envrc  .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml
docs/: google_news_url_resolution.md
google_search_crawler/: __main__.py  legacy.py
google_search_crawler/adapters/: __init__.py  full_text.py
google_search_crawler/adapters/api/: app.py
google_search_crawler/adapters/artifacts/: __init__.py  jsonl.py
google_search_crawler/adapters/persist/: __init__.py  base.py  blob_store.py  google_sheets.py  postgres.py
google_search_crawler/adapters/sources/: __init__.py  base.py  google_news.py  google_news_rss.py  google_search.py  ptt_google_search.py
google_search_crawler/application/: __init__.py  full_text.py  pipeline.py
google_search_crawler/core/: __init__.py  dedupe.py  domain.py  timeparse.py
google_search_crawler/infra/: __init__.py  config.py  logging_utils.py  progress_bar.py  vault.py
migrations/: 001_init.sql
tests/: test_artifacts_jsonl.py  test_dedupe.py  test_full_text.py  test_google_news_rss.py  test_timeparse.py  test_vault.py
