[project]
name = "google-search-crawler"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "GoogleNews~=1.6.15",
  "beautifulsoup4~=4.14.3",
  "fastapi~=0.115.6",
  "google-auth~=2.45.0",
  "gspread~=6.2.1",
  "pandas~=2.3.3",
  "psycopg[binary]~=3.3.2",
  "python-dateutil~=2.9.0.post0",
  "requests~=2.32.5",
  "uvicorn~=0.34.0",
]

[dependency-groups]
dev = [
  "mypy",
  "pytest",
  "ruff",
  "types-python-dateutil",
  "types-requests",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["output"]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
files = ["google_search_crawler", "tests"]

[[tool.mypy.overrides]]
module = ["google_search_crawler.legacy"]
ignore_errors = true
